to Ch3.2-Working with Spring Data JDBC

--- a/Ch03.md
+++ b/Ch03.md
@@ -588,7 +588,7 @@ public class OrderController {
 }
 ```
 
-实测效果：
+### 5 实测效果
 
 订单表：（入库两条）
 
@@ -662,7 +662,288 @@ public class OrderController {
 
 ## 3.2 使用 `Spring Data JDBC`
 
+`Spring Data` 项目是一个相当大的一揽子项目，由几个子项目组成，其中大多数是针对不同数据库类型进行持久化。这当中一些最流行的 `Spring Data` 项目包括：
 
+- `Spring Data JDBC` —— 针对 **关系数据库** 的 `JDBC` 持久化
+- `Spring Data JPA` —— 针对 **关系数据库** 的 `JPA` 持久化
+- `Spring Data MongoDB` —— `Mongo` **文档数据库** 的持久化
+- `Spring Data Neo4j` —— 持久化到 `Neo4j` **图形数据库**
+- `Spring Data Redis` —— 持久化到 `Redis` **键值存储数据库**
+- `Spring Data Cassandra` —— 持久化到 `Cassandra` **列存储数据库**
+
+本节示例 `Spring Data JDBC` 的用法，其较上一节写法更简练，步骤如下：
+
+### 1 引入依赖
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jdbc</artifactId>
+</dependency>
+```
+
+之前的 `spring-boot-starter-jdbc` 可以删了，但 `H2` 数据库依赖仍保留：
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jdbc</artifactId>
+</dependency>
+```
+
+
+
+### 2 定义 Repository 接口
+
+启用 `Spring Data JDBC` 的功能需要先改造之前定义的 `Repository` 接口，令其继承一个泛型接口 `Repository<T, ID>`：
+
+```java
+package tacos.data;
+import java.util.Optional;
+import org.springframework.data.repository.Repository;
+import tacos.Ingredient;
+public interface IngredientRepository extends Repository<Ingredient, String> {
+    Iterable<Ingredient> findAll();
+    Optional<Ingredient> findById(String id);
+    Ingredient save(Ingredient ingredient);
+}
+```
+
+为了简化代码，`Spring` 还提供了包含常见增删查改的、继承了 `Repository<T, ID>` 的另一个实用接口 `CrudRepository<T, ID>`。有了 `CrudRepository`，单表操作的基本接口方法及实现都不用手敲了，`Spring` 会在项目启动时 **自动生成一个实现类**！因此，两个 `Repository` 接口的最终版本如下：
+
+`IngredientRepository.java`：（同时删除实现类 `JdbcIngredientRepository.java`）
+
+```java
+package tacos.data;
+import org.springframework.data.repository.CrudRepository;
+import tacos.Ingredient;
+public interface IngredientRepository extends CrudRepository<Ingredient, String> {
+}
+```
+
+`OrderRepository.java`：（同时删除实现类 `JdbcOrderRepository.java`）
+
+```java
+package tacos.data;
+import org.springframework.data.repository.CrudRepository;
+import tacos.TacoOrder;
+public interface OrderRepository extends CrudRepository<TacoOrder, Long> {
+}
+```
+
+
+
+### 3 为域实体添加持久化注解
+
+唯一需要做的另一件事是 **为域实体添加注解**，这样才能让 `Spring Data JDBC` 知道如何进行持久化。
+
+常见注解有：
+
+- `@Id`：标识主键字段；
+
+- `@Table`：标识实体类对应的表，默认情况下不用添加，默认按类名推测出表名。如 `TacoOrder` 实体，表名推测为 `Taco_Order`；若需自定义一个名称 `Taco_Cloud_Order`，可使用 `@Table("Taco_Cloud_Order")`；
+
+- `@Column("customer_name")`：默认情况下不用添加，`Spring`会自动推断列名，如：`deliveryName` 属性将自动映射到名为 `delivery_name` 的列上；`@Column` 常用于标识一个自定义名称，用法与 `@Table` 类似——
+
+  ```java
+  @Column("customer_name")
+  @NotBlank(message="Delivery name is required")
+  private String deliveryName;
+  ```
+
+按照上述规则，分别为 `Taco`、`TacoOrder`、`Ingredient` 添加 `@Table`、`@Id` 注解：
+
+```java
+@Data
+@Table
+public class TacoOrder implements Serializable {
+    @Id
+    private Long id;
+    // ...
+}
+
+@Data
+@Table
+public class Ingredient implements Persistable<String> {
+    @Id
+    private String id;
+    // ...
+}
+
+@Data
+@Table
+public class Taco {
+    @Id
+    private Long id;
+    // ...
+}
+```
+
+对于中间表实体 `IngredientRef`，因为类名与表名一致，可不用加 `@Table`；又因 `ingredient` 并非主键字段，`@Id` 注解也不用添加。
+
+
+
+### 4 实测效果
+
+运行项目，添加两个 `taco` 并提交订单。首次提交报错：
+
+```markdown
+org.h2.jdbc.JdbcSQLIntegrityConstraintViolationException: NULL not allowed for column "PLACED_AT"; SQL statement:
+INSERT INTO "TACO_ORDER" ("CC_CVV", "CC_EXPIRATION", "CC_NUMBER", "DELIVERY_CITY", "DELIVERY_NAME", "DELIVERY_STATE", "DELIVERY_STREET", "DELIVERY_ZIP", "PLACED_AT") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?) [23502-200]
+```
+
+原因是使用 `CrudRepository` 接口后，之前手动给 `placedAt` 赋值的语句没有了，而实体类上又没有初始值。新增一个初值即可：
+
+```java
+@Data
+@Table
+public class TacoOrder implements Serializable {
+    private Date placedAt = new Date();
+    // ...
+}
+```
+
+再次启动，再次报错：提示 `Taco` 表的 `created_at` 字段没得到值：检查发现 `created_at` 写成了 `create_at`，之前因为是手动传值，所以没有报错；现在交由接口自动实现，名称不匹配就拿不到值了。
+
+改为 `createdAt` 后再测：（成功）
+
+![spring-data-jdbc test1](assets/3-12.png)
+
+![spring-data-jdbc test2](assets/3-13.png)
+
+![spring-data-jdbc test3](assets/3-14.png)
+
+
+
+### 5 使用 `CommandLineRunner` 预加载数据
+
+上一节使用 `JdbcTemplate` 类时，预加载数据库的配料初始数据，采用的是在 `classpath` 下存放 `data.sql` 脚本。除此之外，`Spring Boot` 还提供了两个接口供项目启动时执行数据预加载逻辑：
+
+- `CommandLineRunner` 接口 
+- `ApplicationRunner` 接口
+
+这样，当应用程序启动时，应用程序上下文中实现了 `CommandLineRunner` 或 `ApplicationRunner` 接口的任何 `bean`，将在应用程序上下文和所有 `bean` **生成之后**，在其他逻辑 **发生之前**，调用它们的 `run()` 方法。这为我们提供了一个方便的地方，以加载预置数据到数据库中。
+
+例如放到启动类 `TacoCloudApplication` 中：
+
+```java
+package tacos;
+
+import org.springframework.boot.ApplicationRunner;
+import org.springframework.boot.CommandLineRunner;
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.context.annotation.Bean;
+import tacos.Ingredient.Type;
+import tacos.data.IngredientRepository;
+
+@SpringBootApplication
+public class TacoCloudApplication {
+
+    public static void main(String[] args) {
+        SpringApplication.run(TacoCloudApplication.class, args);
+    }
+
+    @Bean
+    public CommandLineRunner dataLoader(IngredientRepository repo) {
+        return args -> {
+            repo.deleteAll();
+            repo.save(new Ingredient("FLTO", "Flour Tortilla", Type.WRAP));
+            repo.save(new Ingredient("COTO", "Corn Tortilla", Type.WRAP));
+            repo.save(new Ingredient("GRBF", "Ground Beef", Type.PROTEIN));
+            repo.save(new Ingredient("CARN", "Carnitas", Type.PROTEIN));
+            repo.save(new Ingredient("TMTO", "Diced Tomatoes", Type.VEGGIES));
+            repo.save(new Ingredient("LETC", "Lettuce", Type.VEGGIES));
+            repo.save(new Ingredient("CHED", "Cheddar", Type.CHEESE));
+            repo.save(new Ingredient("JACK", "Monterrey Jack", Type.CHEESE));
+            repo.save(new Ingredient("SLSA", "Salsa", Type.SAUCE));
+            repo.save(new Ingredient("SRCR", "Sour Cream", Type.SAUCE));
+        };
+    }
+//    @Bean
+//    public ApplicationRunner dataLoader(IngredientRepository repo) {
+//        return args -> {
+//            repo.deleteAll();
+//            repo.save(new Ingredient("FLTO", "Flour Tortilla", Type.WRAP));
+//            repo.save(new Ingredient("COTO", "Corn Tortilla", Type.WRAP));
+//            repo.save(new Ingredient("GRBF", "Ground Beef", Type.PROTEIN));
+//            repo.save(new Ingredient("CARN", "Carnitas", Type.PROTEIN));
+//            repo.save(new Ingredient("TMTO", "Diced Tomatoes", Type.VEGGIES));
+//            repo.save(new Ingredient("LETC", "Lettuce", Type.VEGGIES));
+//            repo.save(new Ingredient("CHED", "Cheddar", Type.CHEESE));
+//            repo.save(new Ingredient("JACK", "Monterrey Jack", Type.CHEESE));
+//            repo.save(new Ingredient("SLSA", "Salsa", Type.SAUCE));
+//            repo.save(new Ingredient("SRCR", "Sour Cream", Type.SAUCE));
+//        };
+//    }
+}
+
+```
+
+
+
+> **`CommandLineRunner` 与 `ApplicationRunner` 的区别**
+>
+> 
+>
+> 区别在于传递给 `run()` 方法的参数不同：
+>
+> - `CommandLineRunner` 接受字符串变量，不解析命令行参数；
+>
+> - `ApplicationRunner` 接受 `ApplicationArguments` 参数，它作为命令行的解析组件，该参数提供了访问参数的一些方法。例如，命令行中指定一个参数：`--version 1.2.3`，可以通过 `getOptionValues` 方法进行解析：
+>
+>   ```java
+>   public ApplicationRunner dataLoader(IngredientRepository repo) {
+>       return args -> {
+>           List<String> version = args.getOptionValues("version");
+>           // ...
+>       };
+>   }
+>   ```
+>
+>   这里的 `getOptionValues()` 方法返回一个 `List<String>`，以允许选项参数被多次设定。
+
+使用 `CommandLineRunner` 或 `ApplicationRunner` 进行初始数据加载的好处，是他们使用存储库来创建对象，而不是使用 `SQL` 脚本。
+
+这意味着它们对 **关系数据库** 或 **非关系数据库** 同样有效。
+
+
+
+实测发现，直接在启动类添加 `@Bean` 注解来实现 `CommandLineRunner` 或 `ApplicationRunner` 接口，项目将启动失败：
+
+```markdown
+Caused by: org.springframework.dao.IncorrectUpdateSemanticsDataAccessException: Failed to update entity [Ingredient(id=FLTO, name=Flour Tortilla, type=WRAP)]. Id [FLTO] not found in database.
+	at org.springframework.data.jdbc.core.JdbcAggregateChangeExecutionContext.updateWithoutVersion(JdbcAggregateChangeExecutionContext.java:370) ~[spring-data-jdbc-2.2.3.jar:2.2.3]
+	at org.springframework.data.jdbc.core.JdbcAggregateChangeExecutionContext.executeUpdateRoot(JdbcAggregateChangeExecutionContext.java:115) ~[spring-data-jdbc-2.2.3.jar:2.2.3]
+	at org.springframework.data.jdbc.core.AggregateChangeExecutor.execute(AggregateChangeExecutor.java:70) ~[spring-data-jdbc-2.2.3.jar:2.2.3]
+	... 43 common frames omitted
+```
+
+通过与示例代码反复对比，发现问题出在 `Ingredient` 实体上。应该让其实现 `Persistable<String>` 接口，实现其 `isNew` 方法：
+
+```java
+@Data
+@Table
+@AllArgsConstructor
+public class Ingredient implements Persistable<String> {
+
+    @Id
+    private String id;
+    private String name;
+    private Type type;
+
+    @Override
+    public boolean isNew() {
+        return true;
+    }
+
+    public enum Type {
+        WRAP, PROTEIN, VEGGIES, CHEESE, SAUCE
+    }
+}
+```
+
+注解 `Persistable` 用于在使用 `Spring Data JDBC` 时，通过它来确定是否要 **创建新实体** 还是 **更新现有实体**（这里设为新增，后文对此有介绍，但感觉不应放在最后）。这样，就可以删除 `data.sql` 文件，直接通过这两个启动接口来预加载数据库数据了。
 
 
 
