to S3.3: Persisting data with Spring Data JPA

--- a/Ch03.md
+++ b/Ch03.md
@@ -949,6 +949,216 @@ public class Ingredient implements Persistable<String> {
 
 ## 3.3 应用 `Spring Data JPA` 持久化数据
 
+`JPA` 全称 `Java Persistence API`，即 `Java` 数据持久化接口，是用 `Java` 处理关系型数据持久化的另一套备选方案。`Spring Data JPA` 提供了一个类似 `Spring Data JDBC` 的、基于 `JPA` 的方式来持久化数据。
+
+通过在实体类添加注解，接口方法只需按规则创建签名，后台实现即可自动完成；对于复杂查询还可以自定义查询语句，非常强大。
+
+### 1 引入依赖
+
+新增如下依赖，替换上节中的 `Spring Data JDBC` 依赖：
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+```
+
+
+
+### 2 添加实体类注解
+
+`JPA` 虽然进一步简化了代码，但仍需在实体类层面正确添加各种注解：
+
+- `@Entity`：用于声明一个 `JPA` 实体类；
+- `@Id`：用于表示 `JPA` 实体的主键。注意：它与 `Spring Data JDBC` 中的 `@Id` **不是同一个注解** —— `JPA` 使用 `javax.persistence.Id`、`JDBC` 使用 `org.springframework.data.annotation.Id`；
+- `JPA` 要求实体类必须具有无参构造函数，因此必须添加 `@NoArgsConstructor` 注解；
+- 无需 `@Table`：`JPA` 会自动推断表名；
+- 无需手动实现 `Persistable` 接口：`Persistable` 仅用于 `JDBC` 下判定是否需要新增实体，在使用 `JDBC` 时是必须实现的，而在 `JPA` 中非必须；
+
+
+
+因此，`Ingredient` 实体类改造如下：
+
+```java
+package tacos;
+
+import javax.persistence.Entity;
+import javax.persistence.Id;
+
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Entity
+@AllArgsConstructor
+@NoArgsConstructor(access=AccessLevel.PRIVATE, force=true)
+public class Ingredient {
+    @Id
+    private String id;
+    private String name;
+    private Type type;
+    public enum Type {
+        WRAP, PROTEIN, VEGGIES, CHEESE, SAUCE
+    }
+}
+```
+
+注意：
+
+- `@AllArgsConstructor`：由于项目启动时通过 `ApplicationRunner` 接口初始化了一组 `Ingredient`，里面用到了全参数的构造函数，因此这里需要追加；
+
+- 追加全参构造函数后，实体类默认的无参构造器没有了，这违反了 `JPA` 实体类的规定，因此需要显式声明无参构造函数，添加注解 `@NoArgsConstructor`；
+
+- `@NoArgsConstructor` 中的 `access`：表示本例不希望直接调用无参构造函数；
+
+- `@NoArgsConstructor` 中的 `force`：设置为 `true`，则所有声明为 `final` 的属性在无参构造函数中，会根据数据类型自动赋初值，避免初始化失败；
+
+- 实测时，`IDEA` 在第 15 行编译报错：
+
+  ```markdown
+  Class 'Ingredient' should have [public, protected] no-arg constructor
+  ```
+
+  可见 `IDEA` 编辑器并不认可将无参构造函数强制设为 `private`。但这并不影响程序运行。
+
+
+
+同理改造 `Taco` 实体：
+
+```java
+@Data
+@Entity
+public class Taco {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
+    private Date createdAt = new Date();
+
+    @NotNull
+    @Size(min = 5, message = "Name must be at least 5 characters long")
+    private String name;
+
+    @Size(min = 1, message = "You must choose at least 1 ingredient")
+    @ManyToMany()
+    private List<Ingredient> ingredients = new ArrayList<>();
+
+    public void addIngredient(Ingredient ingredient) {
+        this.ingredients.add(ingredient);
+    }
+}
+```
+
+共三处改动：
+
+- 类上添加 `@Entity` 注解；
+- 主键字段添加 `JPA` 下的 `@Id`、以及主键自增策略；
+- 指定 `Taco` 与 `ingredients` 的关系：根据前文介绍，`Taco` 与 `Ingredient` 相互独立，`Ingredient` 与自身构成汇聚关系，`Taco` 引用了该汇聚关系；因此 `Taco` 与 `Ingredient` 是【多对多】关系—— 1 个 `Taco` 可包含多个 `Ingredient` 组合；1 个 `Ingredient` 可出现在不同的 `Taco` 中。因此使用 `@ManyToMany`；
+
+
+
+最后修改 `TacoOrder` 实体：
+
+```java
+@Data
+@Entity
+public class TacoOrder implements Serializable {
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
+
+    @OneToMany(cascade = CascadeType.ALL)
+    private List<Taco> tacos = new ArrayList<>();
+    public void addTaco(Taco taco) {
+        this.tacos.add(taco);
+    }
+    // ...
+}
+```
+
+注意第 8 行：订单与 `Taco` 是一一对应的，一个订单一定包含一个或多个 `Taco`；`Taco` 不能独立于订单存在；因此订单与 `Taco` 构成汇聚关系，使用【一对多】注解；`cascade = CascadeType.ALL` 表示删除订单后，对应的 `Taco` 也自动删除。
+
+
+
+### 3 声明 JPA 的 Repository 接口
+
+与 `Spring Data JDBC` 中的接口定义完全相同，也无需添加任何注解，都继承了 `CrudRepository` 接口：
+
+```java
+public interface IngredientRepository extends CrudRepository<Ingredient, String> {
+}
+public interface OrderRepository extends CrudRepository<TacoOrder, Long> {
+}
+```
+
+
+
+### 4 自定义 Repository
+
+`JPA` 的一个强大之处在于，只要接口方法的签名按一定的解析规则来进行创建，就可以跳过接口实现，由 `Spring Data JPA` 自动新增实现类。该规则的通用格式为：【动词】+【主语（选填）】+ `By` +【判定条件】
+
+![DSL demonstration](assets/3-15.png)
+
+其中——
+
+- 动词可以是 `find`、`read`、`get`；
+- 主语非必须，只要泛型中指定了实体类就可以自动推断；
+- 判定条件即某个或多个字段作筛选条件，通过 `And` 连接；
+- `Spring Data JPA` 预置了大量适用于单表的常用解析样式，支持各类常见查询场景（相等、范围查找、相似匹配、排序等）。
+
+
+
+除了 `Equals` 和 `Between` 操作，`Spring Data JPA` 还支持如下操作：
+
+- IsAfter, After, IsGreaterThan, GreaterThan
+- IsGreaterThanEqual, GreaterThanEqual
+- IsBefore, Before, IsLessThan, LessThan
+- IsLessThanEqual, LessThanEqual
+- IsBetween, Between
+- IsNull, Null
+- IsNotNull, NotNull
+- IsIn, In
+- IsNotIn, NotIn
+- IsStartingWith, StartingWith, StartsWith
+- IsEndingWith, EndingWith, EndsWith
+- IsContaining, Containing, Contains
+- IsLike, Like
+- IsNotLike, NotLike
+- IsTrue, True
+- IsFalse, False
+- Is, Equals
+- IsNot, Not
+- IgnoringCase, IgnoresCase
+
+此外，还可以添加排序字段（如 `OrderByDeliveryCityAsc`）、全局忽略大小写匹配（`AllIgnoringCase`）。实测自定义接口方法如下：
+
+```java
+public interface OrderRepository extends CrudRepository<TacoOrder, Long> {
+    List<TacoOrder> findByDeliveryZip(String deliveryZip);
+
+    List<TacoOrder> readTacoOrdersByDeliveryZipAndPlacedAtBetween(String deliveryZip, Date startDate, Date endDate);
+
+    List<TacoOrder> findByDeliveryNameAndDeliveryCityAllIgnoringCase(String deliveryName, String deliveryCity);
+
+    List<TacoOrder> findByDeliveryCityOrderByDeliveryName(String city);
+
+    @Query("from TacoOrder o where o.deliveryCity='Seattle'")
+    List<TacoOrder> readOrdersDeliveredInSeattle();
+}
+```
+
+注意：
+
+- 第 10 行中 `@Query` 内要使用 `HQL` 语法，原书中写作 `"Order o where o.deliveryCity='Seattle'"` 会报错；正确写法为：`"from TacoOrder o where o.deliveryCity='Seattle'"`；
+- 原书进行示范时，提到一个根本不存在的字段 `deliveryTo`，应该是笔误；根据上下文推断，这里应指代收货人 `deliveryName`；
+
 
 
 ## 小结
+
+- `JdbcTemplate` 大大简化了 `JDBC` 的工作。
+- 当需要知道数据库生成的 `id` 时，可以同时使用 `PreparedStatementCreator` 和 `KeyHolder`。
+- `Spring Data JPA` 使得 `JPA` 持久化就像编写存储库接口一样简单。
